feat: init assets-storage service

--- a/apps/gateway/.env.example
+++ b/apps/gateway/.env.example
@@ -1,2 +1,4 @@
-JWT_TOKEN=your_jwt_token
+JWT_TOKEN=SCXKuhqq1MhAabmD2248Esd03g40qEFD
+JWT_EXPIRES_IN=10000000000
 PORT=4000
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/users?schema=public
