--- a/apps/storage/.env.example
+++ b/apps/storage/.env.example
@@ -1,1 +1,4 @@
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/storage?schema=public
+AWS_ACCESS_KEY_ID=123
+AWS_SECRET_ACCESS_KEY=123
+AWS_S3_REGION=us-east-1
