--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@apollo/server": "^4.11.2",
     "@as-integrations/fastify": "^2.1.1",
+    "@aws-sdk/client-s3": "^3.726.0",
     "@nestjs/apollo": "^12.2.2",
     "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
     "@nestjs/graphql": "^12.2.2",
     "@nestjs/jwt": "^10.2.0",
