--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/platform-fastify": "^10.4.15",
+    "@nestjs/terminus": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
