feat: init mail services && fix nats communication

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@apollo/server": "^4.11.2",
     "@as-integrations/fastify": "^2.1.1",
     "@aws-sdk/client-s3": "^3.726.0",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/apollo": "^12.2.2",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
@@ -27,6 +28,8 @@
     "install": "^0.13.0",
     "nats": "^2.28.2",
     "nest": "^0.1.6",
+    "nestjs-pino": "^4.2.0",
+    "nodemailer": "^6.9.16",
     "passport-jwt": "^4.0.1",
     "ts-loader": "^9.5.1",
     "ts-morph": "^24.0.0",
@@ -35,6 +38,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.10.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/uuid": "^10.0.0",
     "i": "^0.3.7",
@@ -71,8 +75,8 @@
     "migrate:deploy:products": "npx dotenv -e ./apps/products/.env -- npx prisma migrate deploy --preview-feature --schema ./apps/users/src/utils/prisma/products.prisma",
     "migrate:reset:products": "npx dotenv -e ./apps/products/.env -- npx prisma migrate reset --preview-feature --schema ./apps/users/src/utils/prisma/products.prisma",
     "----   storage  ----": "",
-    "start:debug:storage": "npx dotenv -e ./apps/products/.env -- nest start products --debug --watch",
-    "build:storage": "nest build products",
+    "start:debug:storage": "npx dotenv -e ./apps/storage/.env -- nest start storage --debug --watch",
+    "build:storage": "nest build storage",
     "prisma:generate:storage": "npx dotenv -e ./apps/storage/.env -- npx prisma generate --schema ./apps/storage/src/utils/prisma/storage.prisma",
     "migrate:dev:create:storage": "npx dotenv -e ./apps/storage/.env -- npx prisma migrate dev --create-only --schema ./apps/storage/src/utils/prisma/storage.prisma",
     "migrate:deploy:storage": "npx dotenv -e ./apps/storage/.env -- npx prisma migrate deploy --preview-feature --schema ./apps/storage/src/utils/prisma/storage.prisma",
