fix: prisma  types && user.auth.service

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
     "@prisma/client": "^6.1.0",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.3",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
@@ -52,7 +54,7 @@
     "rm:dist": "rimraf dist",
     "----   all  ----": "",
     "start:debug": "concurrently \"npm run start:debug:*\" ",
-    "prisma:generate": "concurrently \"npm run prisma:genereate:*\" ",
+    "prisma:generate": "concurrently \"npm run prisma:generate:*\" ",
     "prisma:deploy": "concurrently \"npm run migrate:deploy:*\" ",
     "gql:definitions": "concurrently \"npm run gql:definitions:*\" && npm run format:gql",
     "build": "concurrently \"npm run build:*\" ",
