feat: add express controller for upload files && update storage schema

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@apollo/server": "^4.11.2",
     "@as-integrations/fastify": "^2.1.1",
     "@aws-sdk/client-s3": "^3.726.0",
+    "@blazity/nest-file-fastify": "^1.0.0",
+    "@fastify/multipart": "^6.0.1",
     "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/apollo": "^12.2.2",
     "@nestjs/common": "^10.4.15",
@@ -14,6 +16,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/platform-fastify": "^10.4.15",
+    "@nestjs/swagger": "^8.1.1",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
     "@prisma/client": "^6.1.0",
