--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,9 @@ services:
       - NATS_SERVER_NAME=nats-server
       - NATS_CLUSTER_PORT=6222
       - NATS_HTTP_PORT=8222
+    volumes:
+      - ./nats-server.conf:/etc/nats/nats-server.conf
+    command: ["--config", "/etc/nats/nats-server.conf"]
 
   pgadmin:
     image: dpage/pgadmin4:latest
