chore: update .gitignore with additional data file exclusions

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ apps/**/src/utils/prisma/types/*
 data.txt
 assets-service/1738023882586-b4e8361c1ea1c145-scene.gltf
 data.txt
+data_file_beta.txt
+data_file_now.txt
